--- a/front/src/app/pages/login/login.page.html
+++ b/front/src/app/pages/login/login.page.html
@@ -14,7 +14,7 @@
       <ion-col>
         <ion-item>
           <ion-label position="floating">{{ "farm.documento_tecnico" | translate }}<ion-text color="danger" >*</ion-text></ion-label>
-          <ion-input type="text" [(ngModel)]="documento_tecnico" required autocomplete="off"></ion-input>
+          <ion-input type="number" [(ngModel)]="documento_tecnico" required autocomplete="off"></ion-input>
         </ion-item>
       </ion-col>
     </ion-row>
@@ -22,7 +22,7 @@
       <ion-col>
         <ion-item>
           <ion-label position="floating">{{ "farm.name" | translate }}<ion-text color="danger" >*</ion-text></ion-label>
-          <ion-input type="text" [(ngModel)]="farm_name" required autocomplete="off"></ion-input>
+          <ion-input type="text" class="mayus" [(ngModel)]="farm_name" required autocomplete="off"></ion-input>
         </ion-item>
       </ion-col>
     </ion-row>
