--- a/front/src/app/pages/farm/farm.page.html
+++ b/front/src/app/pages/farm/farm.page.html
@@ -277,6 +277,30 @@
             </ion-col>
           </ion-row>
 
+          <!--Valor promedio de la tierra-->
+          <ion-row>
+            <ion-col>
+              <ion-item>
+                <ion-label position="floating">{{ "farm.average_land_value" | translate }}</ion-label>
+                <ion-input [(ngModel)]="average_land_value" type="number" ></ion-input>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+
+          <!--Medida Valor promedio de la tierra-->
+          <ion-row>
+            <ion-col>
+              <ion-item>
+                <ion-label position="stacked"><b>{{ "farm.measure" | translate }}</b></ion-label>
+                <ion-select [(ngModel)]="measure" okText="{{ 'general.select' | translate }}" cancelText="{{ 'general.cancel' | translate }}">
+                  <ion-select-option value="{{ 'farm.measure' | translate }}">{{ 'farm.measure' | translate }}</ion-select-option>
+                  <ion-select-option value="{{ 'farm.stables' | translate }}">{{ 'farm.stables' | translate }}</ion-select-option>
+                  <ion-select-option value="{{ 'farm.ha' | translate }}">{{ 'farm.ha' | translate }}</ion-select-option>
+                </ion-select>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+
           <!--Infraestructura productiva-->
           <ion-row>
             <ion-col>
