--- a/front/src/app/pages/organization/organization.page.html
+++ b/front/src/app/pages/organization/organization.page.html
@@ -70,7 +70,7 @@
               </ion-item>
               <!--Nombre del representante legal-->
               <ion-item>
-                <ion-label position="floating">{{ "organization.legal_representative_name" | translate }}<ion-text color="danger" >*</ion-text></ion-label>
+                <ion-label position="floating">{{ "organization.legal_representative_name" | translate }}</ion-label>
                 <ion-input [(ngModel)]="legal_representative_name" type="text" class="mayus"></ion-input>
               </ion-item>
               <!--Cedula del representante legal-->
